# winclaw

./: .env.example  .gitignore  pyproject.toml
examples/: README.md  agent1.py  agent10.py  agent11.py  agent12.py  agent15.py  agent2.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  base.py  interactive.py  mcp.json  mcp_loader.py  permissions.py  recovery.py  skill_loader.py  utils.py
examples/memory/: __init__.py  memory_loader.py  memory_manager.py  prompt.py
examples/template/: memory.md
examples/tools/: BashTool.py  CronTool.py  FileEditTool.py  FileReadTool.py  FileWriteTool.py  ForkTool.py  LoadSkillTool.py  SaveMemoryTool.py  TaskTool.py  __init__.py  workspace_fs.py
tests/: test_cli_input.py  test_examples_interactive.py  test_filesystem.py  test_tools_registry.py  test_web.py
winclaw/agent/: context.py  loop.py  skills.py  subagent.py
winclaw/bus/: events.py
winclaw/channels/: __init__.py  base.py  manager.py
winclaw/cli/: commands.py
winclaw/config/: schema.py
winclaw/server/: __init__.py
winclaw/skills/memory/: SKILL.md
winclaw/skills/use-weixin/: SKILL.md
winclaw/skills/use-weixin/references/: search_weixin.ps1  send_files.py  send_message.py
winclaw/tools/: __init__.py  base.py  filesystem.py  media.py  message.py  registry.py  spawn.py  todo.py  web.py
winclaw/utils/: __init__.py  clipboard.py  media.py
